--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.1.4",
+    "@nuxtjs/pwa": "^3.0.0-beta.19",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "node-sass": "^4.12.0",
