--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "test-nuxt",
+  "name": "apv3-nuxt",
   "version": "1.0.0",
-  "description": "My wicked Nuxt.js project",
+  "description": "Personal website",
   "author": "randompiche",
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate",
+    "generate": "nuxt-ts generate --modern",
     "deploy:staging": ". ./.deploy/build-staging.sh",
     "deploy:prod": ". ./.deploy/build-production.sh",
     "test": "jest",
@@ -17,22 +17,23 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.1.4",
-    "@nuxtjs/pwa": "^3.0.0-beta.19",
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/parser": "^2.1.0",
-    "node-sass": "^4.12.0",
-    "nuxt": "^2.0.0",
-    "nuxt-property-decorator": "^2.4.0",
-    "sass-loader": "^8.0.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "nuxt": "^2.12.2",
+    "nuxt-property-decorator": "^2.7.2",
     "velocity-animate": "^1.5.2"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.2.0",
+    "@nuxt/typescript-build": "^0.5.8",
+    "@nuxt/typescript-runtime": "^0.4.7",
     "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2"
+    "@nuxtjs/eslint-module": "^1.2.0",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-nuxt": "^0.5.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
   }
 }
